--- a/Développement Web.html
+++ b/Développement Web.html
@@ -28,7 +28,7 @@
 
       <!-- Menu desktop -->
       <nav class="hidden md:flex space-x-6 text-sm font-semibold text-[#214980]">
-        <a href="acceuil1.html" class="custom-green">ACCEUIL</a>
+        <a href="index.html" class="custom-green">ACCEUIL</a>
         <a href="#a-propos" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
 
         <!-- FORMATIONS Dropdown -->
