--- a/index.html
+++ b/index.html
@@ -5,135 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Centre de Formation</title>
   <link rel="stylesheet" href="acceuil.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
+
+
 <body>
 
 
-<!-- Navbar -->
-<header id="navbar" class="w-full bg-white bg-opacity-90 fixed top-0 z-50 transition-all duration-300">
 
-  <div class="max-w-7xl mx-auto px-4 sm:px-8 lg:px-8">
-    <div class="flex justify-between items-center h-24">
+
+<!-- Navbar -->
+<header id="navbar" class="w-full bg-white fixed top-0 z-50 transition-all duration-300">
+  <div class="max-w-7xl mx-auto px-6 lg:px-12">
+    <div class="flex justify-between items-center h-20">
 
       <!-- Logo -->
       <div class="flex items-center">
-        <img src="logo.png" class="h-24 md:h-32 w-auto" />
+<img src="logo.png" alt="Logo" class="h-12 md:h-20 w-auto">
       </div>
 
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-[#214980]">
-<a href="acceuil1.html" class="custom-green">ACCEUIL</a>
-        <a href="#a-propos" class="hover:text-teal-500">QUI SOMMES-NOUS</a>
+      <nav class="hidden md:flex items-center space-x-8 text-sm font-semibold text-[#214980]">
+        <a href="index.html" class="hover:text-teal-500 transition">ACCEUIL</a>
+        <a href="#a-propos" class="hover:text-teal-500 transition">QUI SOMMES-NOUS</a>
 
-        
-  <!-- FORMATIONS Dropdown -->
-<div class="relative inline-block" x-data="{ open: false }" 
-     @mouseenter="open = true" 
-     @mouseleave="open = false"
->
-  <button class="hover:text-teal-500 inline-flex items-center focus:outline-none">
-    FORMATIONS
-    <svg class="ml-1 h-4 w-4 fill-current" viewBox="0 0 20 20">
-      <path d="M5.25 7.25L10 12.25L14.75 7.25H5.25Z" />
-    </svg>
-  </button>
+        <!-- Dropdown FORMATIONS -->
+        <div class="relative group">
+          <button class="inline-flex items-center hover:text-teal-500 transition">
+            FORMATIONS
+            <svg class="ml-1 h-4 w-4 fill-current" viewBox="0 0 20 20">
+              <path d="M5.25 7.25L10 12.25L14.75 7.25H5.25Z" />
+            </svg>
+          </button>
 
-  <div
-    x-show="open"
-    x-transition:enter="transition ease-out duration-200"
-    x-transition:enter-start="opacity-0 transform -translate-y-2"
-    x-transition:enter-end="opacity-100 transform translate-y-0"
-    x-transition:leave="transition ease-in duration-150"
-    x-transition:leave-start="opacity-100 transform translate-y-0"
-    x-transition:leave-end="opacity-0 transform -translate-y-2"
-    class="absolute left-0 mt-2 w-56 bg-white rounded-md shadow-lg z-50"
-    style="display: none;"
-  >
-    <a href="Développement Web.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Développement web  & Full Stack</a>
-    <a href="#testing" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Tests logiciels</a>
-    <a href="project manager.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Gestion de projet</a>
-    <a href="SAP ERP.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">ERP SAP</a>
-    <a href="Digital.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Marketing Digital</a>
-    <a href="Analyse de données.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Analyse de données</a>
-    <a href="Réseaux.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Réseaux & Systèmes</a>
-  </div>
-</div>
-
- <a href="" class="hover:text-teal-500">Contact</a>
-  
+          <!-- Dropdown content -->
+          <div class="absolute hidden group-hover:block bg-white shadow-md rounded-md mt-3 py-2 w-64 z-50 animate-fade-in">
+            <a href="Développement Web.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Développement web & Full Stack</a>
+            <a href="#testing" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Tests logiciels</a>
+            <a href="project manager.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Gestion de projet</a>
+            <a href="SAP ERP.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">ERP SAP</a>
+            <a href="Digital.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Marketing Digital</a>
+            <a href="Analyse de données.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Analyse de données</a>
+            <a href="Réseaux.html" class="block px-4 py-2 text-sm text-[#214980] hover:bg-teal-100">Réseaux & Systèmes</a>
+          </div>
         </div>
+
+        <a href="#contact" class="hover:text-teal-500 transition">CONTACT</a>
       </nav>
 
-      <!-- Menu mobile button -->
+      <!-- Bouton Contact (desktop) -->
+      <div class="hidden md:block">
+        <a href="#contact" class="bg-teal-500 text-white px-4 py-2 rounded-lg shadow hover:bg-teal-600 transition">Nous Contacter</a>
+      </div>
+
+      <!-- Bouton hamburger (mobile) -->
       <button id="menuBtn" class="md:hidden text-3xl text-[#214980] focus:outline-none">
         &#9776;
       </button>
     </div>
   </div>
 
-  <!-- Mobile menu -->
-<!-- Mobile menu -->
-<div id="mobileMenu" class="hidden md:hidden absolute top-full right-0 mt-2 w-64 bg-white z-50 p-4 shadow-lg rounded-lg">
-  <div class="flex justify-end">
-    <button id="closeMenu" class="text-2xl text-[#214980]">&times;</button>
-  </div>
-
-  <!-- MENU MOBILE -->
-  <nav class="mt-4 space-y-2 text-[#214980] font-medium text-sm">
-    <a href="index.html" class="block hover:bg-teal-100 px-2 py-1 rounded">ACCEUIL</a>
-    <a href="#a-propos" class="block hover:bg-teal-100 px-2 py-1 rounded">QUI SOMMES-NOUS</a>
-
-    <!-- Dropdown Formations -->
-    <div>
-      <button id="mobileDropdownBtn" class="w-full flex justify-between items-center px-2 py-1 rounded hover:bg-teal-100">
-        FORMATIONS
-        <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path d="M6 9l6 6 6-6"/>
-        </svg>
-      </button>
-      <div id="mobileDropdown" class="hidden pl-2 mt-2 space-y-1 text-sm">
-        <a href="Développement Web.html" class="block px-2 py-1 hover:bg-teal-100 rounded">Développement web & Full Stack</a>
-        <a href="#testing" class="block px-2 py-1 hover:bg-teal-100 rounded">Tests logiciels</a>
-        <a href="project manager.html" class="block px-2 py-1 hover:bg-teal-100 rounded">Gestion de projet</a>
-        <a href="SAP ERP.html" class="block px-2 py-1 hover:bg-teal-100 rounded">ERP SAP</a>
-        <a href="Digital.html" class="block px-2 py-1 hover:bg-teal-100 rounded">Marketing Digital</a>
-        <a href="Analyse de données.html" class="block px-2 py-1 hover:bg-teal-100 rounded">Analyse de données</a>
-        <a href="Réseaux.html" class="block px-2 py-1 hover:bg-teal-100 rounded">Réseaux & Systèmes</a>
-      </div>
+  <!-- Menu mobile -->
+  <div id="mobileMenu" class="hidden md:hidden fixed top-20 left-0 w-full bg-white z-40 p-6 shadow-lg animate-slide-down">
+    <div class="flex justify-end">
+      <button id="closeMenu" class="text-3xl text-[#214980]">&times;</button>
     </div>
-  </nav>
-</div>
+    <nav class="mt-6 space-y-4 text-[#214980] font-medium text-lg">
+      <a href="index.html" class="block hover:text-teal-500 transition">ACCEUIL</a>
+      <a href="#a-propos" class="block hover:text-teal-500 transition">QUI SOMMES-NOUS</a>
 
-<!-- JS pour ouvrir/fermer le menu mobile -->
+      <!-- Dropdown FORMATIONS -->
+      <div>
+        <button id="mobileDropdownBtn" class="w-full flex justify-between items-center hover:text-teal-500 transition">
+          FORMATIONS
+          <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6"/>
+          </svg>
+        </button>
+        <div id="mobileDropdown" class="hidden pl-4 mt-2 space-y-2 text-sm">
+          <a href="Développement Web.html" class="block hover:text-teal-500">Développement web & Full Stack</a>
+          <a href="#testing" class="block hover:text-teal-500">Tests logiciels</a>
+          <a href="project manager.html" class="block hover:text-teal-500">Gestion de projet</a>
+          <a href="SAP ERP.html" class="block hover:text-teal-500">ERP SAP</a>
+          <a href="Digital.html" class="block hover:text-teal-500">Marketing Digital</a>
+          <a href="Analyse de données.html" class="block hover:text-teal-500">Analyse de données</a>
+          <a href="Réseaux.html" class="block hover:text-teal-500">Réseaux & Systèmes</a>
+        </div>
+      </div>
 
+      <a href="#contact" class="block hover:text-teal-500 transition">CONTACT</a>
+    </nav>
+  </div>
 </header>
 
-<script>
-const menuBtn = document.getElementById('menuBtn');
-const mobileMenu = document.getElementById('mobileMenu');
-const closeMenu = document.getElementById('closeMenu');
-const mobileDropdownBtn = document.getElementById('mobileDropdownBtn');
-const mobileDropdown = document.getElementById('mobileDropdown');
 
-menuBtn.addEventListener('click', () => {
-  mobileMenu.classList.toggle('hidden');
-});
 
-closeMenu.addEventListener('click', () => {
-  mobileMenu.classList.add('hidden');
-});
+<!-- Animations -->
+<style>
+  @keyframes slide-down {
+    from { transform: translateY(-10px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+  }
+  .animate-slide-down { animation: slide-down 0.3s ease-out; }
 
-mobileDropdownBtn.addEventListener('click', () => {
-  mobileDropdown.classList.toggle('hidden');
-});
-</script>
+  @keyframes fade-in {
+    from { opacity: 0; transform: translateY(5px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  .animate-fade-in { animation: fade-in 0.2s ease-out; }
+</style>
+
+
 
 
 
@@ -191,13 +178,16 @@ mobileDropdownBtn.addEventListener('click', () => {
 
 <script>
   // Animation d'apparition du texte au chargement
-  window.addEventListener('load', () => {
-    const textContent = document.getElementById('text-content');
+window.addEventListener('load', () => {
+  const textContent = document.getElementById('text-content');
+  if(textContent){
     setTimeout(() => {
       textContent.style.opacity = '1';
       textContent.style.transform = 'translateY(0)';
     }, 300);
-  });
+  }
+});
+
 </script>
 
  <script>
@@ -517,6 +507,31 @@ prevBtn.addEventListener('click', (e) => {
   
   
   </script>
+
+  <script>
+  const menuBtn = document.getElementById("menuBtn");
+  const closeBtn = document.getElementById("closeMenu");
+  const mobileMenu = document.getElementById("mobileMenu");
+  const mobileDropdownBtn = document.getElementById("mobileDropdownBtn");
+  const mobileDropdown = document.getElementById("mobileDropdown");
+
+  if(menuBtn && closeBtn && mobileMenu && mobileDropdownBtn && mobileDropdown){
+    // Toggle menu
+    menuBtn.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+
+    closeBtn.addEventListener("click", () => {
+      mobileMenu.classList.add("hidden");
+    });
+
+    // Toggle dropdown
+    mobileDropdownBtn.addEventListener("click", () => {
+      mobileDropdown.classList.toggle("hidden");
+    });
+  }
+</script>
+
 <footer class="bg-[#edeff0] text-[#1F2D3D] py-12 px-6 md:px-16">
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 items-start text-center md:text-left">
 
