--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <div class="flex justify-between items-center h-20">
 
       <!-- Logo -->
-      <div class="flex items-center">
-<img src="logo.png" alt="Logo" class="h-12 md:h-20 w-auto">
-      </div>
+   <div class="flex items-center">
+  <img src="logo.png" alt="Logo" class="h-16 sm:h-20 md:h-24 lg:h-28 w-auto">
+</div>
+
 
       <!-- Menu desktop -->
       <nav class="hidden md:flex items-center space-x-8 text-sm font-semibold text-[#214980]">
@@ -212,14 +213,15 @@ window.addEventListener('load', () => {
 
 <section id="formations" class="py-12 bg-gray-50">
 
-  <div class="flex justify-center items-center gap-4">
-    <h1 class="text-5xl font-extrabold text-[#214980] m-0">
-      Parcours de 
-    </h1>
-    <span class="bg-[#08aa18] px-6 py-2 rounded-2xl text-white text-3xl md:text-5xl font-extrabold inline-block">
-      formation
-    </span>
-  </div>
+  <div class="flex flex-col md:flex-row justify-center items-center gap-2 md:gap-4 text-center md:text-left">
+  <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-[#214980] m-0">
+    Parcours de
+  </h1>
+  <span class="bg-[#08aa18] px-4 sm:px-6 py-1 sm:py-2 rounded-2xl text-white text-2xl sm:text-3xl md:text-5xl font-extrabold inline-block mt-2 md:mt-0">
+    formation
+  </span>
+</div>
+
   <div class="flex justify-center mt-6">
     <svg width="220" height="20" viewBox="0 0 220 20" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M1 10C33 5 77 20 110 10C143 0 187 15 219 10" stroke="#08aa18" stroke-width="2" />
