mise a jour du projet

--- a/Développement Web.html
+++ b/Développement Web.html
@@ -154,22 +154,21 @@
 
 <!-- Formations -->
 <section id="formations" class="px-4 py-12 bg-white">
-  <div class="flex justify-center items-center gap-4">
-    <h1 class="text-5xl font-extrabold text-[#214980] m-0">
-     Développement
+  <div class="flex flex-col md:flex-row justify-center items-center gap-4">
+    <h1 class="text-4xl sm:text-5xl md:text-5xl font-extrabold text-[#214980] m-0">
+      Développement
     </h1>
-    <span class="bg-[#08aa18] px-6 py-2 rounded-2xl text-white text-3xl md:text-5xl font-extrabold inline-block">
-    Web
+    <span class="bg-[#08aa18] px-4 sm:px-6 py-2 sm:py-3 rounded-2xl text-white text-2xl sm:text-3xl md:text-5xl font-extrabold inline-block">
+      Web
     </span>
-  </div>
+</div>
 
-     <br>
-  <!-- Ligne décorative SVG verte -->
-  <div class="flex justify-center mb-10 animate-fade-in-up">
-    <svg width="220" height="20" viewBox="0 0 220 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M1 10C33 5 77 20 110 10C143 0 187 15 219 10" stroke="#08aa18" stroke-width="2" />
-    </svg>
-  </div>
+<!-- Ligne décorative SVG verte -->
+<div class="flex justify-center mb-10 animate-fade-in-up">
+  <svg width="220" height="20" viewBox="0 0 220 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-40 sm:w-52 md:w-64">
+    <path d="M1 10C33 5 77 20 110 10C143 0 187 15 219 10" stroke="#08aa18" stroke-width="2" />
+  </svg>
+</div>
   </section>
 
 <section class="px-6 py-12 bg-[#f9fafb]">
@@ -180,9 +179,9 @@
         <img src="images/devloppement.jpg" alt="Développement Web Hybride"
              class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
         <div class="p-6">
-          <h1 class="text-xl sm:text-2xl font-extrabold text-[#214980] mb-3 hover:underline">
-            Développement Web Hybride
-          </h1>
+          <h1 class="text-3xl font-extrabold text-[#214980] mb-2 hover:underline">
+              Développement Web Hybride
+        </h1>
           <p class="text-sm sm:text-base text-gray-600">
             Une formation pratique pour apprendre à concevoir et développer des applications web.
           </p>
@@ -199,9 +198,9 @@
         <img src="images/java orienté objet.jpg" alt="Java Orienté Objet"
              class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
         <div class="p-6">
-          <h1 class="text-xl sm:text-2xl font-extrabold text-[#214980] mb-3 hover:underline">
-            Java Orienté Objet
-          </h1>
+          <h1 class="text-3xl font-extrabold text-[#214980] mb-2 hover:underline">
+             Java Orienté Objet
+        </h1>
           <p class="text-sm sm:text-base text-gray-600">
             Apprenez les principes fondamentaux de la programmation orientée objet en Java : classes, héritage, encapsulation, polymorphisme et bonnes pratiques de conception.
           </p>
@@ -215,31 +214,12 @@
       </div>
 
       <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-lg hover:-translate-y-2 transition-transform duration-300">
-        <img src="images/java jee.jpg" alt="Java JEE"
-             class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
-        <div class="p-6">
-          <h1 class="text-xl sm:text-2xl font-extrabold text-[#214980] mb-3 hover:underline">
-            Java JEE
-          </h1>
-          <p class="text-sm sm:text-base text-gray-600">
-            Développez des applications web robustes en Java en maîtrisant les composants clés de JEE : Servlets, JSP, JDBC, EJB, et les architectures multi-couches.
-          </p>
-          <div class="mt-6 text-center">
-            <a href="javaee.html"
-               class="bg-[#214980] text-white px-5 py-2 rounded-full hover:scale-105 transition-transform">
-              En savoir plus
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-lg hover:-translate-y-2 transition-transform duration-300">
         <img src="images/Full Stack.jpg" alt="Full Stack"
              class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
         <div class="p-6">
-          <h1 class="text-xl sm:text-2xl font-extrabold text-[#214980] mb-3 hover:underline">
-            Full Stack (Angular 17 / Spring Boot)
-          </h1>
+          <h1 class="text-3xl font-extrabold text-[#214980] mb-2 hover:underline">
+           Full Stack (Angular 17 / Spring Boot)
+        </h1>
           <p class="text-sm sm:text-base text-gray-600">
             Une formation complète et intensive pour devenir développeur Full Stack (Angular 17 / Spring Boot), en maîtrisant le développement d’applications web modernes côté front-end et back-end.
           </p>
@@ -252,26 +232,27 @@
         </div>
       </div>
 
-      <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-lg hover:-translate-y-2 transition-transform duration-300">
-        <img src="images/devops.jpg" alt="DevOps"
-             class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
-        <div class="p-6">
-          <h1 class="text-xl sm:text-2xl font-extrabold text-[#214980] mb-3 hover:underline">
-            DevOps
-          </h1>
-          <p class="text-sm sm:text-base text-gray-600">
-            Une formation complète avec préparation à la certification internationale et mise en pratique des outils DevOps (CI/CD, Docker, Kubernetes...).
-          </p>
-          <div class="mt-6 text-center">
-            <a href="devops.html"
-               class="bg-[#214980] text-white px-5 py-2 rounded-full hover:scale-105 transition-transform">
-              En savoir plus
-            </a>
-          </div>
-        </div>
-      </div>
-
+     <div class="bg-white border border-[#b5b3c0] rounded-2xl shadow-lg hover:-translate-y-2 transition-transform duration-300 sm:col-start-2">
+  <img src="images/devops.jpg" alt="DevOps"
+       class="w-full h-56 sm:h-60 object-cover rounded-t-2xl" />
+  <div class="p-6">
+     <h1 class="text-3xl font-extrabold text-[#214980] mb-2 hover:underline">
+           Devops
+        </h1>
+    <p class="text-sm sm:text-base text-gray-600">
+      Une formation complète avec préparation à la certification internationale et mise en pratique des outils DevOps (CI/CD, Docker, Kubernetes...).
+    </p>
+    <div class="mt-6 text-center">
+      <a href="devops.html"
+         class="bg-[#214980] text-white px-5 py-2 rounded-full hover:scale-105 transition-transform">
+        En savoir plus
+      </a>
     </div>
+  </div>
+</div>
+
+
+ </div>
   </div>
 </section>
 
