--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@ window.addEventListener("click", (e) => {
 </script>
 
 
-
 <script>
   // Animation d'apparition du texte au chargement
 window.addEventListener('load', () => {
@@ -353,8 +352,8 @@ window.addEventListener('load', () => {
     </div>
    
 </a>
-<a href="Réseaux.html" class="block">
- <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-2xl">
+<a href="Réseaux.html" class="block sm:col-start-2">
+ <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-2xl ">
   <img src="images acceuil/reseaux.jpg" alt="Développement web & Full Stack" class="w-full h-40 object-cover">
       <div class="p-6 text-center">
         <h3 class="text-3xl font-extrabold text-[#214980] mb-2 hover:underline">Réseaux & Systèmes </h3>
@@ -362,8 +361,7 @@ window.addEventListener('load', () => {
       </div>
     </div>
 </a>
-  </div>
-
+</div>
 </section>
 
     
